--- a/assets/scss/templates/home.scss
+++ b/assets/scss/templates/home.scss
@@ -214,10 +214,11 @@ $nudge: map-get($spacer, 4);
 			justify-content: center;
 			align-items: flex-start;
 			max-width: calc( var(--content-width) / 2 );
-			min-height: 100vh;
-			padding: 0;
+			min-height: calc( 100vh - #{$nudge} );
+			padding: 0 0 $nudge;
 			margin-left: auto;
 			margin-right: auto;
+			margin-bottom: 0;
 			transform: translateX(50%);
 		}
 	}
